# Advanced-Compiler-Principle-Assignment

./: .gitignore  README.md
Assignment1/: ASTInterpreter.cpp  Environment.h  InterpreterVisitor.h  compile.sh  dockernote.txt  note.md
Assignment1/ast-interpreter/: ASTDump.sh  ASTInterpreter.cpp  CMakeLists.txt  Environment.h  InterpreterVisitor.cpp  InterpreterVisitor.h  compile.sh  heap.cpp
Assignment1/ast-interpreter/testcase/: .gitignore  ast-interpreter  ast-interpreter-docker  judge.py  judge_docker.py  judge_std.py  lib_std.c  test28.c
Assignment1/testcase/: baseline.c  judge.py  judge_docker.py  lib.c  test01.c  test02.c  test25.c  test26.c  test27.c  test29.c
Assignment2/: CMakeLists.txt  LLVMAssignment.cpp  README.txt  note.txt  util.hpp
Assignment2/testcase/: .gitignore  judge.py  llvmassignment  std00.txt  std01.txt  std02.txt  std03.txt  std04.txt  std05.txt  std06.txt  std07.txt  std08.txt  std09.txt  std10.txt  std11.txt  std12.txt  std13.txt  std14.txt  std15.txt  std16.txt  std17.txt  std18.txt  std19.txt  std20.txt  std21.txt  std23.txt  std24.txt  std25.txt  test00.bc  test01.bc  test02.bc  test03.bc  test04.bc  test05.bc  test06.bc  test07.bc  test08.bc  test09.bc  test10.bc  test11.bc  (+20 more)
Assignment3/: CMakeLists.txt  Dataflow.h  InterAnalysis.h  LLVMAssignment.cpp  PointerAnalysis.h  README.txt  debug.h
Assignment3/testcase/: .gitignore  compile.py  judge.py  std00.txt  std01.txt  std02.txt  std03.txt  std06.txt  std07.txt  std08.txt  std09.txt  std10.txt  std11.txt  std12.txt  std13.txt  std14.txt  std15.txt  std16.txt  std17.txt  std19.txt  std20.txt  std22.txt  std23.txt  std24.txt  std25.txt  std26.txt  std27.txt  std28.txt  std29.txt  std31.txt  std32.txt  std33.txt  std34.txt  std35.txt  std36.txt  std37.txt  std38.txt  test00.bc  test01.bc  test02.bc  (+45 more)
